# gdml-to-mesh

./: README.md  environment.yml  pyproject.toml
gdml_to_mesh/: _build.py  _config.py  cli.py
geant4_extract/: .gitignore  CMakeLists.txt  extract_mesh.cc  extract_placements.cc  extract_surfaces.cc  visualize.py  visualize_single.py
geant4_extract/cad/: bege_lv.brep  fiber_cl1_l200_bNone.brep  fiber_cl2_l200_bNone.brep  fiber_coating_l200_tpb150.brep  fiber_core_l200_bNone.brep  icpc_lv.brep  lar_s.brep  pen_bege_full_s.brep  pen_icpc_full_s.brep  sipm_outer_bottom_r50.000000001_nmod6.brep  sipm_outer_top_r50.000000001_nmod6.brep  sipm_r50.000000001_nmod6.brep  test_view.py  world_s.brep
geant4_extract/cad/interfaces/: interface_0.brep  interface_0.stl  interface_1.brep  interface_1.stl  interface_10.brep  interface_100.brep  interface_1000.brep  interface_1001.brep  interface_1002.brep  interface_1003.brep  interface_1004.brep  interface_1005.brep  interface_1006.brep  interface_1007.brep  interface_1008.brep  interface_1009.brep  interface_101.brep  interface_1010.brep  interface_1011.brep  interface_1012.brep  interface_1013.brep  interface_1014.brep  interface_1015.brep  interface_1016.brep  interface_1017.brep  interface_1018.brep  interface_1019.brep  interface_102.brep  interface_1020.brep  interface_1021.brep  interface_1022.brep  interface_1023.brep  interface_1024.brep  interface_1025.brep  interface_1026.brep  interface_1027.brep  interface_1028.brep  interface_1029.brep  interface_103.brep  interface_1030.brep  (+1071 more)
geant4_extract/cnpy/: example1.cpp
geant4_extract/include/: AssemblyBuilder.hh  DetectorAssembly.hh  InterfaceExtractor.hh  MaterialExporter.hh  OpticalInterface.hh  SolidConverter.hh  SurfaceExporter.hh  SurfaceMesher.hh  VolumeInstance.hh  VolumeMetadataExporter.hh  VolumeSTLExporter.hh  occ_mesher.hh
geant4_extract/metadata/: interfaces.json  materials.json  surfaces.json
geant4_extract/src/: AssemblyBuilder.cc  InterfaceExtractor.cc  MaterialExporter.cc  SolidConverter.cc  SurfaceExporter.cc  SurfaceMesher.cc  VolumeMetadataExporter.cc  VolumeSTLExporter.cc  main_occ_mesher.cc  occ_mesher.cc
legend_theia/: geometry.py  materials.py  registry.py  surfaces.py
meshes/: export_npz.py  view_scene.py
